--- a/src/app/family/family-download.component.scss
+++ b/src/app/family/family-download.component.scss
@@ -8,7 +8,8 @@ mat-card {
 }
 
 table {
-  border-collapse: collapse;
+  border-collapse: separate;
+  border-spacing: 0;
 }
 
 thead {
@@ -23,9 +24,18 @@ thead {
   z-index: 1;
 }
 
-table, th, td {
-  border: 1px solid #cccccc;
+th, td {
+  border-right: 1px solid #cccccc;
+  border-bottom: 1px solid #cccccc;
   padding: 0.5em;
+}
+
+tr:first-child th, tr:first-child td {
+  border-top: 1px solid #cccccc;
+}
+
+th:first-child, td:first-child {
+  border-left: 1px solid #cccccc;
 }
 
 th {
